# backend-base-python

./: README.md  TODO.md  pyproject.toml
src/main/application/commands/: delete_account.py  insert_account.py
src/main/application/services/: insert_account_service.py
src/main/domain/model/: account.py  account_id.py  contact_information.py
src/main/infrastructure/: main.py
src/main/infrastructure/acl/dto/: insert_account_request_dto.py
src/main/infrastructure/acl/translators/: insert_account_request_dto_translator.py
src/main/infrastructure/adapters/input/controllers/: account_controller.py
src/shared/: event.py  repository.py
